--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  flutter_svg_provider: ^1.0.3
   flutter_test:
     sdk: flutter
   image_picker: ^0.8.0+3
   tflite: ^1.1.2
+  lottie: ^2.4.0
+  shimmer: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
