--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,16 @@ dev_dependencies:
   shimmer: ^3.0.0
   tflite: ^1.1.2
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
+  webview_flutter: ^4.2.2
+  share_plus: ^7.0.2
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
-  image_path: "assets/images/logo_launcher.png"
+  min_sdk_android: 21
+  image_path: "assets/images/logo_launcher_icon_432.png"
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
