--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
     - assets/tf/labels.txt
     - assets/images/
     - assets/icons/
+    - assets/json/model/model_tanaman.json
+
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
